<resources>
    <string name="app_name">Lang</string>
    <string name="btn_add_phrases">Add Phrases</string>
    <string name="btn_display_phrases">Display Phrases</string>
    <string name="btn_edit_phrases">Edit Phrases</string>
    <string name="btn_language_subscription">Language Subscription</string>
    <string name="btn_translate">Translate</string>
    <string name="btn_save">save</string>
    <string name="edit_text">Enter your word or phrase</string>
</resources>
